--- a/index.html
+++ b/index.html
@@ -79,23 +79,23 @@
                     <div class="grid-4-columnas">
                         <div class="card">
                             <h3>Michi</h3>
-                            <img src="Img/Cat_1.jpg" alt="Gato 1">
+                            <img src="Img/Cat_1.jpg" alt="Michi">
                             <p>Gato curioso de 2 años, le encanta explorar y jugar con pelotas. Es muy cariñoso con su familia y disfruta de largas siestas al sol.</p>
                         </div>
                         <div class="card">
                             <h3>Luna</h3>
-                            <img src="Img/Gato_2.jpg" alt="Gato 2">
-                            <p>Gatita elegante y tranquila de 3 años. Le fascina observar por la ventana y es experta en encontrar los mejores lugares para dormir.</p>
+                            <img src="Img/Gato_2.jpg" alt="Luna">
+                            <p>Gatita elegante y tranquila de 3 años. Le fascina observar por la ventana y le gusta dormir.</p>
                         </div>
                         <div class="card">
                             <h3>Max</h3>
-                            <img src="Img/Perro_1.jpg" alt="Perro 1">
-                            <p>Perro juguetón y energético de 4 años. Le encanta salir a pasear, correr en el parque y es muy leal con su familia.</p>
+                            <img src="Img/Perro_1.jpg" alt="Max">
+                            <p>Perro juguetón y energético de 4 años. Le encanta salir a pasear y correr en el parque.</p>
                         </div>
                         <div class="card">
                             <h3>Bella</h3>
-                            <img src="Img/Perro_2.jpg" alt="Perro 2">
-                            <p>Perrita dulce y protectora de 5 años. Ama recibir caricias, jugar a buscar la pelota y es excelente guardiana del hogar.</p>
+                            <img src="Img/Perro_2.jpg" alt="Bella">
+                            <p>Perrita dulce y protectora de 5 años. Ama recibir caricias yjugar a buscar la pelota.</p>
                         </div>
                     </div>
                 </section>
