--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuestras Mascotas</title>
     <link rel="stylesheet" href="CSS/estilos.css">
+    <meta name="author" content="Rosa Lopez Ramires">
 </head>
 
 <body>
@@ -79,22 +80,22 @@
                     <div class="grid-4-columnas">
                         <div class="card">
                             <h3>Michi</h3>
-                            <img src="Img/Cat_1.jpg" alt="Michi">
+                            <img src="Img/Mascotas/Cat_1.jpg" alt="Michi">
                             <p>Gato curioso de 2 años, le encanta explorar y jugar con pelotas. Es muy cariñoso con su familia y disfruta de largas siestas al sol.</p>
                         </div>
                         <div class="card">
                             <h3>Luna</h3>
-                            <img src="Img/Gato_2.jpg" alt="Luna">
+                            <img src="Img/Mascotas/Gato_2.jpg" alt="Luna">
                             <p>Gatita elegante y tranquila de 3 años. Le fascina observar por la ventana y le gusta dormir.</p>
                         </div>
                         <div class="card">
                             <h3>Max</h3>
-                            <img src="Img/Perro_1.jpg" alt="Max">
+                            <img src="Img/Mascotas/Perro_1.jpg" alt="Max">
                             <p>Perro juguetón y energético de 4 años. Le encanta salir a pasear y correr en el parque.</p>
                         </div>
                         <div class="card">
                             <h3>Bella</h3>
-                            <img src="Img/Perro_2.jpg" alt="Bella">
+                            <img src="Img/Mascotas/Perro_2.jpg" alt="Bella">
                             <p>Perrita dulce y protectora de 5 años. Ama recibir caricias yjugar a buscar la pelota.</p>
                         </div>
                     </div>
@@ -106,22 +107,31 @@
                         <div class="card">
                             <h3>Alimentación</h3>
                             <p>Proporciona una dieta balanceada según la edad y raza de tu mascota.</p>
+                            <img src="Img/Consejos/Alimentacion.jpg" alt="Alimentación">
                         </div>
                         <div class="card">
                             <h3>Ejercicio</h3>
                             <p>Los paseos diarios son esenciales para la salud física y mental.</p>
+                            <img src="Img/Consejos/Ejercicio.jpg" alt="Ejercicio">
+
                         </div>
                         <div class="card">
                             <h3>Higiene</h3>
                             <p>Baña a tu mascota regularmente y cepilla su pelaje.</p>
+                            <img src="Img/Consejos/Higiene.jpg" alt="Higiene">
+
                         </div>
                         <div class="card">
                             <h3>Veterinario</h3>
                             <p>Visitas regulares al veterinario previenen enfermedades.</p>
+                            <img src="Img/Consejos/Veterinario.jpg" alt="Veterinario">
+
                         </div>
                         <div class="card">
                             <h3>Socialización</h3>
                             <p>Permite que tu mascota interactúe con otros animales y personas.</p>
+                            <img src="Img/Consejos/Socializacion.jpg" alt="Socialización">
+
                         </div>
                     </div>
                 </section>
@@ -133,7 +143,7 @@
             <div class="container">
                 <div>
                     <h3>Porque este projecto?</h3>
-                    <p>Me gustan los gatos y me gustaria una pagina donde pueda compartir mi afición y conocimientos
+                    <p>Me gustan los gatos y perros me gustaria una pagina donde pueda compartir mi afición y conocimientos
                         sobre ellos.</p>
                 </div>
                 <div>
