Comunidad - html , css y js

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuestras Mascotas</title>
     <link rel="stylesheet" href="CSS/estilos.css">
-    <meta name="author" content="Rosa Lopez Ramires">
+    <meta name="author" content="Rosa Patricia Lopez Ramirez">
 </head>
 
 <body>
