--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Rosa Lopez Ramires">
+    <meta name="author" content="Rosa Patricia Lopez Ramirez">
     <link rel="stylesheet" href="CSS/estilos.css">    
     <title>Login</title>
 </head>
