Separacion de responsabilidades
Se estaba creando una god clase con el css de estilos, haciendo que sea mas dificil mantener o ver errores

--- a/login.html
+++ b/login.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Rosa Patricia Lopez Ramirez">
-    <link rel="stylesheet" href="CSS/estilos.css">    
+    <link rel="stylesheet" href="CSS/estilos-general.css">
+    <link rel="stylesheet" href="CSS/estilos-login.css">    
     <title>Login</title>
 </head>
 <body>
