--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuestras Mascotas</title>
-    <link rel="stylesheet" href="CSS/estilos.css">
+    <link rel="stylesheet" href="CSS/estilos-general.css">
+    <link rel="stylesheet" href="CSS/estilos-index.css">
     <meta name="author" content="Rosa Patricia Lopez Ramirez">
 </head>
 
